2001-01-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSXML.m: ([-GSXMLDocument setRoot:]) set root node to be
	owned by libxml, so we don't free it's memory ourselves.
	* Headers/gnustep/base/NSValue.h: Added range methods.
	* Source/GNUmakefile: Rename value files to GS prefix and remove
	concrete value header.
	* Source/Makefile.postamble: Build GS value files. rather than NS
	* Source/NSValue.m: Added range methods and updated for change to
	naming conventions.  Added abstract placeholder class.  Fixed encoding
	to store the abstract class in the archive.
	* Testing/values.m: Added range check
	* Source/GSTemplateValue.m: Renamed for consistency.
	Adapted encoding/decoding for storing abstract class in archive.
	* Source/GSValue.m: ditto
	* Headers/gnustep/base/NSConcreteValue.h: private info removed
	* Source/NSCTemplateValue.m: Renamed for consistency
	* Source/NSConcreteValue.m: ditto

2001-01-10 Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSAttributedString.m ([GSAttributedString -length]),
	([GSMutableAttributedString -length]): Added for speed.

2001-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Fix bug in checking possible default string
	encodings . reported by Stefan Urbanek

2001-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	Tidyup by removing 'NonCore' categories.

2001-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	General tidyups to simplify code and to make class names
	consistent with the other libraries.
	* Headers/Foundation/NSGAttributedString.h: removed
	* Source/NSGAttributedString.m: renamed to GSAttributedString.m
	concrete classes renamed for consistency with other gstep libs.
	* Source/NSGDictionary.m: renamed to GSDictionary.m
	concrete classes renamed for consistency with other gstep libs.
	* Source/NSAttributedString.m: classes renamed
	* Source/NSDictionary.m: classes renamed
	* Source/GNUmakefile: replace NSGAttrinbutedString with and
	NSGDictionary with GS prefixed classes.